--- a/WebFeriaVirtual.Negocio/WebFeriaVirtual.Negocio.csproj
+++ b/WebFeriaVirtual.Negocio/WebFeriaVirtual.Negocio.csproj
@@ -47,11 +47,14 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Calidad.cs" />
+    <Compile Include="Empresa.cs" />
     <Compile Include="Producto.cs" />
     <Compile Include="Productor.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Region.cs" />
     <Compile Include="Solicitud.cs" />
     <Compile Include="Tipo.cs" />
+    <Compile Include="Transportista.cs" />
     <Compile Include="UsuarioAdmin.cs" />
     <Compile Include="UsuarioExterno.cs" />
     <Compile Include="UsuarioInterno.cs" />
